--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background-color: #F2F2F2;
+    font-size:xx-large;
+    font-weight: 700;
+    font-family: 'Roboto Condensed', sans-serif;
+}
