--- a/src/app/componentes/precio-crypto/precio-crypto.component.html
+++ b/src/app/componentes/precio-crypto/precio-crypto.component.html
@@ -1,5 +1,5 @@
 
-    <div class="container h-screen w-full flex justify-content-center align-items-center text-center" style="padding-top: 2%;">
+    <div class="container h-screen w-full flex justify-content-center align-items-center text-center" style="padding-top: 2%;" id="body">
         <div class="row col-xs-12 col-sm-6 col-md-8 col-lg-12">
             <div>PRECIO USD</div>
             <div class="col-6" id="compra">Compra</div>
